# ucas_cact_2025

./: README.md
cact-compiler-main/: .cursorindexingignore  .gitignore  .gitmodules  CMakeLists.txt  runtime.c
cact-compiler-main/functional/: 29.cact  32.cact  32.out
cact-compiler-main/include/: Compiler.h
cact-compiler-main/include/backend/: RiscVCodeGen.h  RiscVInstr.h
cact-compiler-main/include/frontend/: AST.h  Evaluate.h  Initial.h  Lexer.h  Parser.h  Symbol.h  Token.h  Visitor.h
cact-compiler-main/include/mir/: BasicBlock.h  CloneInfoMap.h  Constant.h  Function.h  GlobalVal.h  Instr.h  Loop.h  Type.h  Use.h  Value.h
cact-compiler-main/include/util/: CenterControl.h  File.h  FrontendInit.h  HashMap.h  ILinkNode.h  IList.h  Init.h  Manager.h  stl_op.h  util.h
cact-compiler-main/src/: Compiler.cpp
cact-compiler-main/src/backend/: RiscVCodeGen.cpp  RiscVInstr.cpp
cact-compiler-main/src/frontend/: AST.cpp  Evaluate.cpp  Initial.cpp  Parser.cpp  Token.cpp  Visitor.cpp
cact-compiler-main/src/mir/: BasicBlock.cpp  CloneInfoMap.cpp  Constant.cpp  Function.cpp  GlobalVal.cpp  Instr.cpp  Loop.cpp  Type.cpp  Use.cpp  Value.cpp
cact-compiler-main/src/util/: CenterControl.cpp  ILinkNode.cpp  IList.cpp  Manager.cpp
